--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,7 @@
 root = true
 
 
+[*]
 charset = utf-8
 end_of_line = lf
 
@@ -8,3 +9,6 @@ indent_style = space
 indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.{yml,json}]
+indent_size = 2
