--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: peaceiris/actions-gh-pages@v3.6.4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build
+          publish_dir: out/WebGL
 
       - uses: actions/upload-artifact@v2
         with:
