--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,3 +1,4 @@
+# spell-checker: ignore XMLDOC gableroux OPTOUT peaceiris
 name: Build
 
 on:
@@ -41,5 +42,5 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: WebGLBuild
-          path: WebGL
+          path: out/WebGL
 
