--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -51,7 +51,7 @@ jobs:
       - uses: peaceiris/actions-gh-pages@v3.6.4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build
+          publish_dir: build/${{ matrix.targetPlatform }}/${{ matrix.targetPlatform }}
 
       - uses: actions/upload-artifact@v2
         with:
