--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -56,5 +56,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ matrix.targetPlatform }}-Build
-          path: build
-
+          path: build/${{ matrix.targetPlatform }}/${{ matrix.targetPlatform }}
